Training: abstraction layer for Challenge/Problem
- Refactored Event.Type.regionale → semifinal
- Refactored Event.Type.finale → final
- Fix the middleware for current QCM/answers

--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -72,8 +72,8 @@
 					<div class="tl-block">
 						<div class="row">
 							<div class="col-xs-5 col-sm-12">
-								<h4>{% trans "Regionales" %}</h4>
-								<p class="date">{{ request.current_regionales.first.date_begin|date:"d b Y"|default:no_such_date }}</p>
+								<h4>{% trans "Semifinals" %}</h4>
+								<p class="date">{{ request.current_semifinal.first.date_begin|date:"d b Y"|default:no_such_date }}</p>
 							</div>
 							<div class="col-xs-7 col-sm-12">
 								<div class="desc">
