--- a/prologin/problems/templates/problems/challenge.html
+++ b/prologin/problems/templates/problems/challenge.html
@@ -19,7 +19,8 @@
 	</article>
 
 	<div class="list-group">
-		<div class="list-group-item list-group-item-info">{% trans "The problems" %}
+		<div class="list-group-item list-group-item-info">
+			{% trans "The problems" %}
 			<span class="badge alert-info">
 				{% if request.user.is_authenticated %}
 					{% if challenge_done %}{% trans "Congrats, you solved all the problems!" %} ⋅{% endif %}
@@ -28,27 +29,7 @@
 			</span>
 		</div>
 		{% for problem in problems %}
-			<a class="list-group-item" href="#"> {# TODO: href #}
-				<div class="progress" style="width: 100px; float: left; margin-right: 1em"
-					 title="{% blocktrans with level=problem.difficulty %}Level {{ level }}{% endblocktrans %}">
-					<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-						 aria-valuemax="100" style="width: {{ problem.percentage_level }}%;">
-					</div>
-				</div>
-				{{ problem.title }}
-				{% if request.user.is_authenticated %}
-					{% if problem.submission %}
-						{% if problem.submission.succeeded %}
-							<span class="badge alert-success">{% blocktrans with score=problem.submission.score %}
-								{{ score }} pts{% endblocktrans %}</span>
-						{% else %}
-							<span class="badge alert-warning">{% trans "Failed" %}</span>
-						{% endif %}
-					{% else %}
-						<span class="badge">{% trans "Not submitted" %}</span>
-					{% endif %}
-				{% endif %}
-			</a>
+			{% include "problems/stub_problem.html" %}
 		{% endfor %}
 	</div>
 
