About: contest: regional → semifinals

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -42,7 +42,7 @@
 				It consists of a selection of algorithmic problems of increasing difficulty.
 				It is possible to submit the questionnaire by postal mail or directly on this website.
 			{% endblocktrans %}</p>
-			<p>{% trans "Registration is completly free, you just need an Internet access or an envelope to submit your answers." %}</p></div>
+			<p>{% trans "Registration is entirely free, you only need an Internet access or an envelope to submit your answers." %}</p></div>
 			<div class="col-sm-4">
 				<h4>{% trans "Who can qualify?" %}</h4>
 				<p>{% trans "Any student under 21, living in the European Union, who can understand and write French." %}</p>
@@ -55,9 +55,9 @@
 	<div class="bgcont" style="background-image: url({% static 'img/regionales.jpg' %}); background-position: 0 0;">
 		<div class="container presentation-body">
 			<div class="row"><div class="col-sm-8">
-				<h2>{% trans "2<sup>nd</sup> step – Regional events" %}</h2>
+				<h2>{% trans "2<sup>nd</sup> step – Semifinals" %}</h2>
 			<p>{% blocktrans %}
-				The regional events allow the 100 best contestants to qualify for the final.
+				The semifinals allow the 100 best contestants to qualify for the final.
 				The event lasts one day and takes place on a Saturday in January or February,
 				depending on the city. Candidates are divided into various sessions in
 				different examination centers all across France.
