--- a/prologin/problems/templates/problems/search_results.html
+++ b/prologin/problems/templates/problems/search_results.html
@@ -19,6 +19,7 @@
 		<div class="list-group-item list-group-item-info">
 			{% blocktrans count problems|length as count %}Found {{ count }} problem{% plural %}Found {{ count }} problems{% endblocktrans %}
 		</div>
+		{% with show_challenge=True %}
 		{% for problem in page_obj %}
 			{% include "problems/stub_problem.html" %}
 		{% empty %}
@@ -26,6 +27,7 @@
 				{% trans "No problem match your query. Try broader criteria." %}
 			</p>
 		{% endfor %}
+		{% endwith %}
 	</div>
 
 	{% include "stub_pagination.html" %}
