--- a/prologin/team/templates/team/index.html
+++ b/prologin/team/templates/team/index.html
@@ -30,7 +30,9 @@
 				<a href="{% url 'users:profile' member.user.pk %}" class="team-member-avatar" style="{% if member.user.picture_or_avatar %}background-image: url('{{ member.user.picture_or_avatar.url }}'){% endif %}" /></a>
 			</div>
 			<div class="media-body">
-				<h4 class="media-heading"><a href="{% url 'users:profile' member.user.pk %}">{{ member.user.username }}</a> {% if member.user.get_full_name %}<small><br>{{ member.user.get_full_name }}</small>{% endif %}</h4>
+				<h4 class="media-heading">
+					<a href="{% url 'users:profile' member.user.pk %}">{{ member.user.get_full_name|default:member.user.username }}</a>
+						<small><br>{{ member.user.username }}</small></h4>
 				<p>{{ member.role }}</p>
 			</div>
 		</div>
