--- a/prologin/prologin/templates/prologin/main-menu.html
+++ b/prologin/prologin/templates/prologin/main-menu.html
@@ -9,7 +9,8 @@
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i> {{ user.username }} <span class="caret"></span></a>
 		<ul class="dropdown-menu dropdown-menu-right" role="menu">
-			<li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans "My account" %}</a></li>
+			<li><a href="{% url 'users:profile' user.id %}"><i class="fa fa-user"></i> {% trans "My profile" %}</a></li>
+			<li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i> {% trans "Profile &amp; settings" %}</a></li>
 			{% if user.is_staff %}
 			<li><a href="{% url 'admin:index' %}"><i class="fa fa-star"></i> {% trans "Administration" %}</a></li>
 			{% endif %}
