--- a/prologin/news/templates/zinnia/_entry_detail_base.html
+++ b/prologin/news/templates/zinnia/_entry_detail_base.html
@@ -1,10 +1,10 @@
 {% load i18n zinnia %}
 <div id="entry-{{ object.pk }}" class="hentry{% if object.featured %} featured{% endif %}" itemscope itemtype="http://schema.org/NewsArticle">
 	{% block entry-header %}
-	<div class="entry-header">
+	<header class="entry-header">
 		{% block entry-title %}
-		<h2 class="entry-title" itemprop="headline">
-			<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
+		<h2 class="entry-title" itemprop="name">
+			<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark" itemprop="url">
 				{{ object.title|widont }}
 			</a>
 		</h2>
@@ -20,9 +20,9 @@
 					<a href="{{ author.get_absolute_url }}" class="fn url{% if not author.get_full_name %} nickname{% endif %}" rel="author"
 					title="{% blocktrans %}Show all {{ author }}'s entries{% endblocktrans %}">{{ author }}</a></span>{% if not forloop.last %}, {% endif %}
 					{% endfor %}
-					{% trans "on" %}
+					{% trans "on" context "Written by <user> *on* <date>" %}
 					{% else %}
-					{% trans "Written on" %}
+					{% trans "Written on" context "*Written on* <date>" %}
 					{% endif %}
 					{% endwith %}
 					<abbr class="published" title="{{ object.creation_date|date:"c" }}">{{ object.creation_date|date:"DATE_FORMAT" }}</abbr>
@@ -38,7 +38,7 @@
 		{% endblock entry-info %}
 		{% block entry-last-update %}
 		{% endblock entry-last-update %}
-	</div>
+	</header>
 	{% endblock entry-header %}
 
 	{% block entry-body %}
@@ -46,29 +46,43 @@
 		{% block entry-image %}
 		{% if object.image %}
 		<div class="entry-image">
-			<p>
-				{% if continue_reading %}
+			{% if continue_reading %}
 				<a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
-					{% endif %}
-					<img src="{{ object.image.url }}" alt="{{ object.title }}" class="left" itemprop="image" />
-					{% if continue_reading %}
-				</a>
+			{% endif %}
+			<figure itemprop="image" itemscope itemtype="http://schema.org/ImageObject">
+				<img src="{{ object.image.url }}" alt="{{ object.image_caption|default:object.title }}"
+					 itemprop="contentUrl"/>
+				{% if object.image_caption %}
+					<figcaption itemprop="caption">{{ object.image_caption }}</figcaption>
 				{% endif %}
-			</p>
+			</figure>
+			{% if continue_reading %}
+				</a>
+			{% endif %}
 		</div>
 		{% endif %}
 		{% endblock entry-image %}
+
+		{% block entry-lead %}
+		{% if not continue_reading and object.lead %}
+		<div class="entry-summary" itemprop="headline">
+			{{ object.html_lead|safe }}
+		</div>
+		{% endif %}
+		{% endblock entry-lead %}
+
 		{% block entry-content %}
 		<div class="entry-content" itemprop="articleBody">
 			{{ object_content|safe }}
 		</div>
 		{% endblock entry-content %}
+
 		{% block continue-reading %}
 		{% if continue_reading and object_content.has_more %}
 		<p class="continue-reading">
 			<a href="{{ object.get_absolute_url }}"
 				 title="{% blocktrans with object=object.title percent=object_content.remaining_percent|floatformat:0 %}{{ percent }}% of {{ object }} still remains to read.{% endblocktrans %}"
-				 rel="bookmark">
+				 rel="bookmark" itemprop="url">
 				{% trans "Continue reading" %}
 			</a>
 		</p>
@@ -78,11 +92,10 @@
 	{% endblock entry-body %}
 
 	{% block entry-footer %}
-	<div class="entry-footer">
-		{% comment %}
+	<div class="entry-footer well">
 		{% block entry-tags %}
 		<p class="entry-tags">
-			<strong>{% trans "Tags" %}</strong> :
+			<strong>{% trans "Tags:" %}</strong>
 			{% for tag in object.tags_list %}
 			<a href="{% url 'zinnia:tag_detail' tag %}"
 				 title="{% blocktrans %}Show all entries tagged by {{ tag }}{% endblocktrans %}"
@@ -92,7 +105,6 @@
 			{% endfor %}
 		</p>
 		{% endblock entry-tags %}
-		{% endcomment %}
 		{% block entry-shorturl %}
 		<p class="entry-shorturl">
 			<strong>{% trans "Persistent URL:" %}</strong>
